# Turnover-Plataform-V2

./: .dockerignore  .env  .env.supabase  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  debug_model.json  docker-compose.yml  index.html  one_year_model.xgb  package-lock.json  package.json  pyproject.toml  requirements.txt  security_report.md  temp_booster_fix.json  verify_pdi_integration.py  vite.config.ts
.agent/rules/: Global.txt  (+16 more)
.data/: five_year_model.xgb  one_year_model.xgb  synthetic_market_data.csv  synthetic_turnover_data.csv  users.db
.jules/: bolt.md
backend/: Dockerfile  api.py  test_api.py
config/: settings.py
core/: evaluation.py  preprocessing.py
frontend/: .dockerignore  .env.local  Dockerfile  aggregate.html  dashboard.html  index.html  individual.html  nginx.conf  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
legacy/: five_year_model.py  main.py  one_year_model.py  preprocessing.py  shap_fallback_archive.py
scripts/: check_overfitting.py  debug_csv.py  debug_csv_pandas.py  debug_generator.py  debug_model_load.py  debug_startup.py  debug_train.py  get_cols.py  inspect_csv.py  run_training.py  verify_api_startup.py  verify_imports.py  verify_motivation_alg.py  verify_one_year_model_fw.py
studies/: Leave all the ex for the final, keep the prompt as.md  New cross.md  out.md  ppc.md  review_response.md  s44196-024-00650-1_formatted_IA_EN.md
tests/: bayesian_audit.py  bayesian_audit_results.json  test_model_types.py  verify_performance.py  verify_refactor.py
(+109 files in other folders)
